--- a/entity.services.yml
+++ b/entity.services.yml
@@ -4,3 +4,8 @@ services:
     arguments: ['@entity_type.manager', '@request_stack']
     tags:
       - { name: access_check, applies_to: _entity_access_revision }
+
+  entity.bundle_plugin_installer:
+    class: Drupal\entity\BundlePlugin\BundlePluginInstaller
+    arguments: ['@entity_type.manager', '@entity_bundle.listener', '@field_storage_definition.listener', '@field_definition.listener']
+
